# collatz

./: README.md  collatz.py  explanation.py  input.py  page_howto.py  page_main.py  plot.py  pyproject.toml
