[tool.poetry]
name = "collatz"
version = "0.1.0"
description = "calculate collatz"
authors = ["shuntaaaaabbbbb <shutaweb@.gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.9.0"
streamlit = "^1.36.0"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
